<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abstract_0072"
    

>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/Enter_Your_Profile_key"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/profilekey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/Profile_key"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/confirmkey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profilekey"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/Confirm_Key"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmkey"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/save" 
        android:textSize="20sp"
        />
    

</RelativeLayout>
