<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abstract_0072" 
    >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/Enter_Your_Profile_key"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:layout_marginTop="51dp"
        android:ems="10"
        android:hint="@string/Profile_key"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/bcontinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:text="@string/Continue" 
        android:textSize="20sp"/>

</RelativeLayout>
